fixed home page title to appear on mobile

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -33,14 +33,9 @@ ion-content ion-toolbar {
 .title {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
+  font-size: 25px;
   text-align: center;
-  font-size: 25px;  @media (min-width: 800px) {
-    font-size: 30px;
-  }  @media (min-width: 1200px) {
-    font-size: 40px;
-  }
-  text-align: center;
-  margin: 200px
+  margin-top: 200px
 }
 ion-row {
 text-align: center;
